    * 0670 FIX: LDAP: Fixed sync when non lower case attributes are configured...
    * 0671 FIX: LDAP: Disable logging of password changes received from LDAP
    * 0558 FIX: availability: fixed exception on specific filter settings...
    * 0712 FIX: Fix multiple groups with same tag when grouping hosts after a tag...
    * 0762 FIX: Fixed availability filters not opening in IE7

    WATO:
    * 0559 FIX: WATO snapshots: improved validation of (uploaded) snapshots...
    * 0709 FIX: Fix NoneType has not attribute userdb_automatic_sync bug in D-WATO
    * 0728 FIX: mem.win: fixed bug in WATO configuration rule...
    * 0139 FIX: ldap sync: syncing if rules against ldap is not longer case sensitiv

    Notifications:
    * 0720 FIX: Fix timeperiod computation with CMC and flexible notifications...

    BI:
    * 0669 FIX: Fixed regex matching in BI when using character groups [...]...

    Reporting & Availability:
    * 0750 FIX: Availability: fix exception when summary is on and some elements have never been OK

    Event Console:
    * 0672 FIX: Service item of "Check event state in event console" checks can now be configured...


1.2.4:
    Core & Setup:
    * 0682 FIX: Allow overriding of active and custom checks by more specific rule...
    * 0267 FIX: Fixed auth.serials permission problem in check_mk standalone installation...

    Checks & Agents:
    * 0694 wut_webtherm: Support new versions of WUT-Thermometer...
    * 0688 FIX: winperf_msx_queues: Support output of Exchange 2013...
    * 0689 FIX: postgres_sessions: fix empty agent section in case of 0 sessions...
    * 0692 FIX: fileinfo: Avoid duplicate entries in Solaris agent...
    * 0693 FIX: hpux_lvm: avoid problem when alternative vgdisplay is installed...

    Multisite:
    * 0270 FIX: Multisite host tag filter: Now uses exact match...
    * 0273 FIX: Fixed exceptions when modifying / cloning views...
    * 0274 FIX: Fixed exception when view title or description was missing

    WATO: