@@ -24,6 +24,7 @@
     * 0558 FIX: availability: fixed exception on specific filter settings...
     * 0712 FIX: Fix multiple groups with same tag when grouping hosts after a tag...
     * 0762 FIX: Fixed availability filters not opening in IE7
+    * 0766 FIX: Changed transid implemtation to work as CSRF protection (Fixes CVE-2014-2330)...
 
     WATO:
     * 0559 FIX: WATO snapshots: improved validation of (uploaded) snapshots...
